# Kuka_iiwa_3D_vision_pick_and_place

./: README.md
my_pcl_tutorial/: CMakeLists.txt  package.xml  readme.txt
my_pcl_tutorial/launch/: aruco_kinect.launch  calibrate_iiwa_kinect.launch  calibrate_iiwa_realsense.launch  iiwa_test_one_test_transform_basedon_alignment_kinetic.launch  iiwa_test_transform_basedon_alignment.launch  iiwa_test_transform_basedon_alignment_kinetic.launch  iiwa_test_transform_grasp.launch  initialize_iiwa_pose_kinetic.launch  initialize_object_template_iiwa_pose.launch  initialize_object_template_iiwa_pose_kinetic.launch  initialize_object_template_kinetic.launch  kuka_iiwa_publish.launch  read me.txt  show_hand_eye_calibration_result.launch  test_2finger_gripper.launch  test_3finger_gripper.launch  test_five_iiwa_test_transform_grasp.launch  test_four_iiwa_test_transform_grasp.launch  test_kinect.launch  test_one_iiwa_test_transform_grasp.launch  test_three_iiwa_test_transform_grasp.launch  test_two_iiwa_test_transform_grasp.launch
my_pcl_tutorial/src/: alignment_continental.cpp  alignment_continental_kinetic.cpp  cluster_crop_extraction_kinetic.cpp  cluster_extraction.cpp  cluster_extraction_kinetic.cpp  cylinder_segmentation.cpp  example.cpp  example_segmentation.cpp  example_voxelgrid.cpp  extract_alignment_continental.cpp  initialize_iiwa_pose_kinetic.cpp  initialize_object_template_iiwa_pose.cpp  initialize_object_template_iiwa_pose_kinetic.cpp  initialize_object_template_kinetic.cpp  pose.txt  progress  save_pcd.cpp  save_pcd_kinetic.cpp  test_3finger_gripper.cpp  test_five_transform_iiwa_pose_grasp.cpp  test_four_transform_iiwa_pose_grasp.cpp  test_gripper.cpp  test_one_transform_iiwa_pose_basedon_alignment_kinetic.cpp  test_one_transform_iiwa_pose_grasp.cpp  test_three_iiwa_ros.cpp  test_three_transform_iiwa_pose_grasp.cpp  test_two_transform_iiwa_pose_grasp.cpp  transform_iiwa_pose.cpp  transform_iiwa_pose_basedon_alignment.cpp  transform_iiwa_pose_basedon_alignment_kinetic.cpp  transform_iiwa_pose_grasp.cpp  view_point_cloud.cpp  workpiece_object.pcd  workpiece_template.pcd
my_pcl_tutorial/src/data1/: workpiece_object.pcd  workpiece_template.pcd
my_pcl_tutorial/src/pairwise_incremental/: command
